# bayesian-neural-decoder

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  decoder.py
src/bayesian_neural_decoder/: __init__.py  data_iterator.py  data_loader.py  decoder.py  likelihood.py  utils.py
