[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.8"
version = "0.0.1"

name = "bayesian_neural_decoder"
description = "This package provides tools for decoding neural data using a bayesian state-space model."
readme = "README.md"

dependencies = [
  "numpy",
  "pandas",
  "replay_trajectory_classification",
  "plotly"
]